[gd_scene load_steps=3 format=2]

[ext_resource path="res://K8STemplate.gd" type="Script" id=1]
[ext_resource path="res://MainView.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K8STemplate" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 2.51984
margin_bottom = 2.51984
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_left = 1.25992
margin_right = 151.26
rect_min_size = Vector2( 150, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 150.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="AddDeployment" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
text = "New Deployment"

[node name="AddMetadata" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 44.0
text = "New Metadata"

[node name="AddKeyPair" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 150.0
margin_bottom = 68.0
text = "New Key-Pair"
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddDeployment" to="." method="_on_AddDeployment_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddMetadata" to="." method="_on_AddMetadata_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddKeyPair" to="." method="_on_AddKeyPair_pressed"]
